# simrobs_project

./: .gitignore  README.md  pyproject.toml
Mujoco/: mod4.xml  mod5.xml  segway.xml
Script/: PID-LQR.py  PID1.py  PID2.py  project.py  segway_lqr.py  segway_pid.py
logs/: segway_20251215_215723.csv  segway_lqr_20251215_215934.csv
other_people_do/balance-robot-mujoco-sim-main/: README.md
other_people_do/balance-robot-mujoco-sim-main/src/simulation/: robot_lqr.py
